--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Hello Git-Hub!!!</h1>
-    <img src="https://www.pexels.com/uk-ua/photo/9190648/" alt="paris">
+    <img src="https://images.pexels.com/photos/3806690/pexels-photo-3806690.jpeg" alt="you can win if you want" width="400px" >
     
 </body>
 </html>
